--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     'pandas>=0.24.1',
     'PyYAML>=6.0'
 ]
-requires-python = "==3.6.9"
+requires-python = ">=3.6.9"
 [build-system]
 build-backend = "setuptools.build_meta"
 requires = ["setuptools", "wheel"]
